--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.7.3",
+    "i18next": "^25.0.0",
+    "i18next-browser-languagedetector": "^8.0.4",
     "input-otp": "^1.2.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
@@ -55,6 +57,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.4.1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
